# pytorch-model-trainer

./: .dockerignore  .gitignore  Dockerfile-cpu  Dockerfile-cuda  Makefile  README.md  pyproject.toml
gcloud-launcher/: README.md  cli.py  pyproject.toml  run_cpu.sh  run_gpu.sh
gcloud-launcher/settings/: test-shksp.json
src/pytorch_model_trainer/: cli.py  train.py
src/pytorch_model_trainer/data/: dataloader.py
src/pytorch_model_trainer/nn/: attention.py  model.py  test_model.py
src/pytorch_model_trainer/utils/: models.py  torch.py
tests/: test_cli.py  test_train.py
tests/data/: test_dataloader.py
tests/nn/: test_attention.py  test_model.py
tests/utils/: test_models.py  test_torch.py
